# BetterChess

./: .gitignore  BetterChess.sln  BetterChess.vcxproj.filters  CMakeLists.txt
BetterChess/: BetterChess.vcxproj  BetterChess.vcxproj.filters  Bishop.cpp  Bishop.h  Board.cpp  Board.h  Chessboard.cpp  Chessboard.h  Exception.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  PromotionMenu.cpp  PromotionMenu.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Square.h  consts.h
include/: Bishop.h  Board.h  BoardV.h  King.h
src/: Bishop.cpp  BoardV.cpp  Chessboard.cpp  Game.cpp  Knight.cpp  Piece.cpp
